# Elysium-Code-Android

./: .gitignore  README.md  README_MAIN.md  SETUP_INSTRUCTIONS.md  TERMINAL_COMMANDS.md  TROUBLESHOOTING.md  WIRELESS_ADB_SETUP.md  install.sh  publish.sh  settings.gradle.kts  setup_model.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  pty_bridge.cpp  stub_llama.cpp
app/src/main/java/com/elysium/code/: ElysiumApp.kt  MainActivity.kt
app/src/main/java/com/elysium/code/agent/: AgentOrchestrator.kt  ConversationManager.kt  EnhancedAgentOrchestrator.kt  SecuritySandbox.kt  ToolRegistry.kt
app/src/main/java/com/elysium/code/ai/: AdvancedPromptEngine.kt  CodeIntelligence.kt  GgufParser.kt  LlamaEngine.kt  ModelManager.kt  MultimodalProcessor.kt  SelfEvolutionEngine.kt
app/src/main/java/com/elysium/code/editor/: EditorViewModel.kt  FileManager.kt
app/src/main/java/com/elysium/code/mcp/: McpClient.kt
app/src/main/java/com/elysium/code/memory/: InitialKnowledge.kt  MemoryEngine.kt
app/src/main/java/com/elysium/code/plugins/: PersonalityEngine.kt  PluginLoader.kt  SkillsParser.kt
app/src/main/java/com/elysium/code/services/: InferenceService.kt  ModelDownloadService.kt
app/src/main/java/com/elysium/code/terminal/: AdbBridgeManager.kt  EnhancedShellManager.kt  PtyProcess.kt  RootfsInstaller.kt  ShellManager.kt
app/src/main/java/com/elysium/code/ui/: ElysiumNavHost.kt
app/src/main/java/com/elysium/code/ui/components/: NeonEffects.kt
app/src/main/java/com/elysium/code/ui/screens/: BootScreen.kt  ChatScreen.kt  EditorScreen.kt  EnhancedChatScreen.kt  EnhancedEditorScreen.kt  EnhancedTerminalScreen.kt  SettingsScreen.kt  TerminalScreen.kt
app/src/main/java/com/elysium/code/ui/theme/: ElysiumTheme.kt
app/src/main/java/com/elysium/code/utils/: MediaUtils.kt
app/src/main/java/com/elysium/code/viewmodel/: MainViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
